[tool.poetry]
name = "repl_nix_chatgpt"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.0"
Flask = "^2.2.3"
Markdown = "^3.4.1"
MarkupSafe = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
